:bug: Fix hover state for overlapping elements
Use the hover state of the parent instead.

--- a/src/components/SocialLink/SocialLink.css
+++ b/src/components/SocialLink/SocialLink.css
@@ -17,18 +17,16 @@ a.social-link {
 
 .social-icon.black {
   opacity: 1;
-  transition: opacity 200ms ease;
+  transition: all .2s ease;
 }
-.social-icon.black:hover {
+a.social-link:hover .black {
   opacity: 0;
-  transition: opacity 200ms ease;
 }
 
 .social-icon.color {
   opacity: 0;
-  transition: opacity 200ms ease;
+  transition: all .2s ease;
 }
-.social-icon.color:hover {
+a.social-link:hover .color {
   opacity: 1;
-  transition: opacity 200ms ease;
 }
